--- a/hstmockproject/pom.xml
+++ b/hstmockproject/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.onehippo.cms7</groupId>
     <artifactId>hippo-cms7-release</artifactId>
-    <version>7.9.0</version>
+    <version>7.9.1</version>
   </parent>
 
   <name>HST Mock Example Project</name>
@@ -73,7 +73,7 @@
      
     <filesync.override>false</filesync.override>
     <maven.plugins.filesync.version>1.0.0</maven.plugins.filesync.version>
-
+    <mockito.all.version>1.8.4</mockito.all.version>
   </properties>
 
   <repositories>
