--- a/hstmockproject/site/pom.xml
+++ b/hstmockproject/site/pom.xml
@@ -82,11 +82,12 @@
       <artifactId>hst-security</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>org.easymock</groupId>
-      <artifactId>easymock</artifactId>
-      <scope>test</scope>
-    </dependency>
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-all</artifactId>
+          <version>${mockito.all.version}</version>
+          <scope>test</scope>
+      </dependency>
 
     <dependency>
       <groupId>org.onehippo.cms7.hst</groupId>
